// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tool Keywords Field Adding a science keyword with ToolSoecificTerm and removing from added keyword 1`] = `
<div>
  <form
    class="rjsf"
  >
    <div
      class="form-group field field-undefined"
    >
      <div
        class="form-group"
      >
        <div
          id="keyword-picker"
        >
          <div>
            <div
              style="font-size: 1.10rem;"
            >
              <span
                class="title"
              >
                Tool Keyword
              </span>
              <hr
                class="border-0 bg-secondary"
                style="height: 1px;"
              />
            </div>
            <div
              class="added-keywords"
              data-testid="added-tool-keywords"
              style="padding: 20px;"
            />
            <div
              class="eui-nested-item-picker"
              style="margin-left: 105px; padding: 15px;"
            >
              <ul
                class="eui-item-path"
              >
                <li>
                  <a
                    data-testid="tool-keyword__select-previous--tool-keyword"
                  >
                    TOOL KEYWORD
                  </a>
                </li>
                <li>
                  <a
                    data-testid="tool-keyword__select-previous--earth-science-services"
                  >
                    EARTH SCIENCE SERVICES
                  </a>
                </li>
                <li>
                  <a
                    data-testid="tool-keyword__select-previous--data-analysis-and-visualization"
                  >
                    DATA ANALYSIS AND VISUALIZATION
                  </a>
                </li>
                <li>
                  <a
                    data-testid="tool-keyword__select-previous--geographic-information-systems"
                  >
                    GEOGRAPHIC INFORMATION SYSTEMS
                  </a>
                </li>
              </ul>
              <div
                class="eui-item-list-pane"
                style="margin-top: -110px;"
              >
                <div
                  data-testid="tool-keyword__search-keyword-field"
                >
                  <div
                    class="rbt"
                    style="width: 399px; border-style: hidden; outline: none; position: relative;"
                    tabindex="-1"
                  >
                    <div
                      style="display: flex; flex: 1; height: 100%; position: relative;"
                    >
                      <input
                        aria-autocomplete="both"
                        aria-expanded="false"
                        aria-haspopup="listbox"
                        autocomplete="off"
                        class="rbt-input-main form-control rbt-input"
                        placeholder="Search for Keywords..."
                        role="combobox"
                        type="text"
                        value=""
                      />
                      <input
                        aria-hidden="true"
                        class="rbt-input-hint"
                        readonly=""
                        style="background-color: transparent; border-color: transparent; box-shadow: none; color: rgba(0, 0, 0, 0.54); left: 0px; pointer-events: none; position: absolute; top: 0px; width: 100%; border-style: inset inset inset inset; border-width: 2px 2px 2px 2px; line-height: normal; padding: 1px 1px 1px 1px;"
                        tabindex="-1"
                        value=""
                      />
                    </div>
                  </div>
                </div>
                <ul>
                  <li>
                    <a
                      class="final-option"
                      data-testid="tool-keyword__final-option--desktop-geographic-information-systems"
                    >
                       
                      DESKTOP GEOGRAPHIC INFORMATION SYSTEMS
                    </a>
                  </li>
                  <li>
                    <a
                      class="final-option"
                      data-testid="tool-keyword__final-option--mobile-geographic-information-systems"
                    >
                       
                      MOBILE GEOGRAPHIC INFORMATION SYSTEMS
                    </a>
                  </li>
                </ul>
              </div>
            </div>
            <button
              class="eui-btn--blue add-science-keyword btn btn-primary"
              data-testid="tool-keyword__add-keyword-btn"
              disabled=""
              style="margin-top: 25px; margin-left: 15px;"
              type="button"
            >
              <span
                style="margin-right: .25em;"
              >
                <i
                  class="fa-solid fa-circle-plus fa-sm"
                />
              </span>
              Add Keyword
            </button>
          </div>
        </div>
      </div>
    </div>
    <div>
      <button
        class="btn btn-primary"
        type="submit"
      >
        Submit
      </button>
    </div>
  </form>
</div>
`;

exports[`Tool Keywords Field Adding a science keyword with ToolSpecificTerm 1`] = `
<div>
  <form
    class="rjsf"
  >
    <div
      class="form-group field field-undefined"
    >
      <div
        class="form-group"
      >
        <div
          id="keyword-picker"
        >
          <div>
            <div
              style="font-size: 1.10rem;"
            >
              <span
                class="title"
              >
                Tool Keyword
              </span>
              <hr
                class="border-0 bg-secondary"
                style="height: 1px;"
              />
            </div>
            <div
              class="added-keywords"
              data-testid="added-tool-keywords"
              style="padding: 20px;"
            >
              <li>
                EARTH SCIENCE SERVICES &gt; DATA ANALYSIS AND VISUALIZATION &gt; GEOGRAPHIC INFORMATION SYSTEMS &gt; DESKTOP GEOGRAPHIC INFORMATION SYSTEMS
                <a
                  data-testid="tool-keyword__added-keyword--0"
                >
                  <i
                    class="fa fa-times-circle"
                    style="padding: 5px; color: red;"
                  />
                </a>
              </li>
            </div>
            <div
              class="eui-nested-item-picker"
              style="margin-left: 105px; padding: 15px;"
            >
              <ul
                class="eui-item-path"
              >
                <li>
                  <a
                    data-testid="tool-keyword__select-previous--tool-keyword"
                  >
                    TOOL KEYWORD
                  </a>
                </li>
                <li>
                  <a
                    data-testid="tool-keyword__select-previous--earth-science-services"
                  >
                    EARTH SCIENCE SERVICES
                  </a>
                </li>
                <li>
                  <a
                    data-testid="tool-keyword__select-previous--data-analysis-and-visualization"
                  >
                    DATA ANALYSIS AND VISUALIZATION
                  </a>
                </li>
                <li>
                  <a
                    data-testid="tool-keyword__select-previous--geographic-information-systems"
                  >
                    GEOGRAPHIC INFORMATION SYSTEMS
                  </a>
                </li>
              </ul>
              <div
                class="eui-item-list-pane"
                style="margin-top: -110px;"
              >
                <div
                  data-testid="tool-keyword__search-keyword-field"
                >
                  <div
                    class="rbt"
                    style="width: 399px; border-style: hidden; outline: none; position: relative;"
                    tabindex="-1"
                  >
                    <div
                      style="display: flex; flex: 1; height: 100%; position: relative;"
                    >
                      <input
                        aria-autocomplete="both"
                        aria-expanded="false"
                        aria-haspopup="listbox"
                        autocomplete="off"
                        class="rbt-input-main form-control rbt-input"
                        placeholder="Search for Keywords..."
                        role="combobox"
                        type="text"
                        value=""
                      />
                      <input
                        aria-hidden="true"
                        class="rbt-input-hint"
                        readonly=""
                        style="background-color: transparent; border-color: transparent; box-shadow: none; color: rgba(0, 0, 0, 0.54); left: 0px; pointer-events: none; position: absolute; top: 0px; width: 100%; border-style: inset inset inset inset; border-width: 2px 2px 2px 2px; line-height: normal; padding: 1px 1px 1px 1px;"
                        tabindex="-1"
                        value=""
                      />
                    </div>
                  </div>
                </div>
                <ul>
                  <li>
                    <a
                      class="final-option"
                      data-testid="tool-keyword__final-option--desktop-geographic-information-systems"
                    >
                       
                      DESKTOP GEOGRAPHIC INFORMATION SYSTEMS
                    </a>
                  </li>
                  <li>
                    <a
                      class="final-option"
                      data-testid="tool-keyword__final-option--mobile-geographic-information-systems"
                    >
                       
                      MOBILE GEOGRAPHIC INFORMATION SYSTEMS
                    </a>
                  </li>
                </ul>
              </div>
            </div>
            <button
              class="eui-btn--blue add-science-keyword btn btn-primary"
              data-testid="tool-keyword__add-keyword-btn"
              disabled=""
              style="margin-top: 25px; margin-left: 15px;"
              type="button"
            >
              <span
                style="margin-right: .25em;"
              >
                <i
                  class="fa-solid fa-circle-plus fa-sm"
                />
              </span>
              Add Keyword
            </button>
          </div>
        </div>
      </div>
    </div>
    <div>
      <button
        class="btn btn-primary"
        type="submit"
      >
        Submit
      </button>
    </div>
  </form>
</div>
`;

exports[`Tool Keywords Field Adding a science keyword without ToolSpecificTerm 1`] = `
<div>
  <form
    class="rjsf"
  >
    <div
      class="form-group field field-undefined"
    >
      <div
        class="form-group"
      >
        <div
          id="keyword-picker"
        >
          <div>
            <div
              style="font-size: 1.10rem;"
            >
              <span
                class="title"
              >
                Tool Keyword
              </span>
              <hr
                class="border-0 bg-secondary"
                style="height: 1px;"
              />
            </div>
            <div
              class="added-keywords"
              data-testid="added-tool-keywords"
              style="padding: 20px;"
            >
              <li>
                EARTH SCIENCE SERVICES &gt; DATA ANALYSIS AND VISUALIZATION &gt; CALIBRATION/VALIDATION &gt; 
                <a
                  data-testid="tool-keyword__added-keyword--0"
                >
                  <i
                    class="fa fa-times-circle"
                    style="padding: 5px; color: red;"
                  />
                </a>
              </li>
            </div>
            <div
              class="eui-nested-item-picker"
              style="margin-left: 70px; padding: 15px;"
            >
              <ul
                class="eui-item-path"
              >
                <li>
                  <a
                    data-testid="tool-keyword__select-previous--tool-keyword"
                  >
                    TOOL KEYWORD
                  </a>
                </li>
                <li>
                  <a
                    data-testid="tool-keyword__select-previous--earth-science-services"
                  >
                    EARTH SCIENCE SERVICES
                  </a>
                </li>
                <li>
                  <a
                    data-testid="tool-keyword__select-previous--data-analysis-and-visualization"
                  >
                    DATA ANALYSIS AND VISUALIZATION
                  </a>
                </li>
              </ul>
              <div
                class="eui-item-list-pane"
                style="margin-top: -70px;"
              >
                <div
                  data-testid="tool-keyword__search-keyword-field"
                >
                  <div
                    class="rbt"
                    style="width: 399px; border-style: hidden; outline: none; position: relative;"
                    tabindex="-1"
                  >
                    <div
                      style="display: flex; flex: 1; height: 100%; position: relative;"
                    >
                      <input
                        aria-autocomplete="both"
                        aria-expanded="false"
                        aria-haspopup="listbox"
                        autocomplete="off"
                        class="rbt-input-main form-control rbt-input"
                        placeholder="Search for Keywords..."
                        role="combobox"
                        type="text"
                        value=""
                      />
                      <input
                        aria-hidden="true"
                        class="rbt-input-hint"
                        readonly=""
                        style="background-color: transparent; border-color: transparent; box-shadow: none; color: rgba(0, 0, 0, 0.54); left: 0px; pointer-events: none; position: absolute; top: 0px; width: 100%; border-style: inset inset inset inset; border-width: 2px 2px 2px 2px; line-height: normal; padding: 1px 1px 1px 1px;"
                        tabindex="-1"
                        value=""
                      />
                    </div>
                  </div>
                </div>
                <ul>
                  <li>
                    <a
                      class="final-option"
                      data-testid="tool-keyword__final-option--calibration-validation"
                    >
                       
                      CALIBRATION/VALIDATION
                    </a>
                  </li>
                  <li>
                    <a
                      class="item.parent"
                      data-testid="tool-keyword__parent-item--GEOGRAPHIC INFORMATION SYSTEMS"
                    >
                       
                      GEOGRAPHIC INFORMATION SYSTEMS
                    </a>
                  </li>
                </ul>
              </div>
            </div>
            <button
              class="eui-btn--blue add-science-keyword btn btn-primary"
              data-testid="tool-keyword__add-keyword-btn"
              disabled=""
              style="margin-top: 25px; margin-left: 15px;"
              type="button"
            >
              <span
                style="margin-right: .25em;"
              >
                <i
                  class="fa-solid fa-circle-plus fa-sm"
                />
              </span>
              Add Keyword
            </button>
          </div>
        </div>
      </div>
    </div>
    <div>
      <button
        class="btn btn-primary"
        type="submit"
      >
        Submit
      </button>
    </div>
  </form>
</div>
`;

exports[`Tool Keywords Field Search Keyword Test 1`] = `
<div>
  <form
    class="rjsf"
  >
    <div
      class="form-group field field-undefined"
    >
      <div
        class="form-group"
      >
        <div
          id="keyword-picker"
        >
          <div>
            <div
              style="font-size: 1.10rem;"
            >
              <span
                class="title"
              >
                Tool Keyword
              </span>
              <hr
                class="border-0 bg-secondary"
                style="height: 1px;"
              />
            </div>
            <div
              class="added-keywords"
              data-testid="added-tool-keywords"
              style="padding: 20px;"
            >
              <li>
                EARTH SCIENCE SERVICES &gt; DATA ANALYSIS AND VISUALIZATION &gt; CALIBRATION/VALIDATION &gt; 
                <a
                  data-testid="tool-keyword__added-keyword--0"
                >
                  <i
                    class="fa fa-times-circle"
                    style="padding: 5px; color: red;"
                  />
                </a>
              </li>
              <li>
                EARTH SCIENCE SERVICES &gt; DATA ANALYSIS AND VISUALIZATION &gt; GEOGRAPHIC INFORMATION SYSTEMS &gt; MOBILE GEOGRAPHIC INFORMATION SYSTEMS
                <a
                  data-testid="tool-keyword__added-keyword--1"
                >
                  <i
                    class="fa fa-times-circle"
                    style="padding: 5px; color: red;"
                  />
                </a>
              </li>
            </div>
            <div
              class="eui-nested-item-picker"
              style="margin-left: 105px; padding: 15px;"
            >
              <ul
                class="eui-item-path"
              >
                <li>
                  <a
                    data-testid="tool-keyword__select-previous--tool-keyword"
                  >
                    TOOL KEYWORD
                  </a>
                </li>
                <li>
                  <a
                    data-testid="tool-keyword__select-previous--earth-science-services"
                  >
                    EARTH SCIENCE SERVICES
                  </a>
                </li>
                <li>
                  <a
                    data-testid="tool-keyword__select-previous--data-analysis-and-visualization"
                  >
                    DATA ANALYSIS AND VISUALIZATION
                  </a>
                </li>
                <li>
                  <a
                    data-testid="tool-keyword__select-previous--geographic-information-systems"
                  >
                    GEOGRAPHIC INFORMATION SYSTEMS
                  </a>
                </li>
              </ul>
              <div
                class="eui-item-list-pane"
                style="margin-top: -110px;"
              >
                <div
                  data-testid="tool-keyword__search-keyword-field"
                >
                  <div
                    class="rbt has-aux"
                    style="width: 399px; border-style: hidden; outline: none; position: relative;"
                    tabindex="-1"
                  >
                    <div
                      style="display: flex; flex: 1; height: 100%; position: relative;"
                    >
                      <input
                        aria-autocomplete="both"
                        aria-expanded="false"
                        aria-haspopup="listbox"
                        autocomplete="off"
                        class="rbt-input-main form-control rbt-input"
                        placeholder="Search for Keywords..."
                        role="combobox"
                        type="text"
                        value="MOBILE GEOGRAPHIC INFORMATION SYSTEMS"
                      />
                      <input
                        aria-hidden="true"
                        class="rbt-input-hint"
                        readonly=""
                        style="background-color: transparent; border-color: transparent; box-shadow: none; color: rgba(0, 0, 0, 0.54); left: 0px; pointer-events: none; position: absolute; top: 0px; width: 100%; border-style: inset inset inset inset; border-width: 2px 2px 2px 2px; line-height: normal; padding: 1px 1px 1px 1px;"
                        tabindex="-1"
                        value=""
                      />
                    </div>
                    <div
                      class="rbt-aux"
                    >
                      <button
                        aria-label="Clear"
                        class="close btn-close rbt-close"
                        type="button"
                      >
                        <span
                          aria-hidden="true"
                          class="rbt-close-content"
                        >
                          ×
                        </span>
                        <span
                          class="sr-only visually-hidden"
                        >
                          Clear
                        </span>
                      </button>
                    </div>
                  </div>
                </div>
                <ul>
                  <li>
                    <a
                      class="final-option"
                      data-testid="tool-keyword__final-option--desktop-geographic-information-systems"
                    >
                       
                      DESKTOP GEOGRAPHIC INFORMATION SYSTEMS
                    </a>
                  </li>
                  <li>
                    <a
                      class="final-option"
                      data-testid="tool-keyword__final-option--mobile-geographic-information-systems"
                    >
                       
                      MOBILE GEOGRAPHIC INFORMATION SYSTEMS
                    </a>
                  </li>
                </ul>
              </div>
            </div>
            <button
              class="eui-btn--blue add-science-keyword btn btn-primary"
              data-testid="tool-keyword__add-keyword-btn"
              disabled=""
              style="margin-top: 25px; margin-left: 15px;"
              type="button"
            >
              <span
                style="margin-right: .25em;"
              >
                <i
                  class="fa-solid fa-circle-plus fa-sm"
                />
              </span>
              Add Keyword
            </button>
          </div>
        </div>
      </div>
    </div>
    <div>
      <button
        class="btn btn-primary"
        type="submit"
      >
        Submit
      </button>
    </div>
  </form>
</div>
`;

exports[`Tool Keywords Field Selecting Previous Section Test 1`] = `
<div>
  <form
    class="rjsf"
  >
    <div
      class="form-group field field-undefined"
    >
      <div
        class="form-group"
      >
        <div
          id="keyword-picker"
        >
          <div>
            <div
              style="font-size: 1.10rem;"
            >
              <span
                class="title"
              >
                Tool Keyword
              </span>
              <hr
                class="border-0 bg-secondary"
                style="height: 1px;"
              />
            </div>
            <div
              class="added-keywords"
              data-testid="added-tool-keywords"
              style="padding: 20px;"
            />
            <div
              class="eui-nested-item-picker"
              style="margin-left: 105px; padding: 15px;"
            >
              <ul
                class="eui-item-path"
              >
                <li>
                  <a
                    data-testid="tool-keyword__select-previous--tool-keyword"
                  >
                    TOOL KEYWORD
                  </a>
                </li>
                <li>
                  <a
                    data-testid="tool-keyword__select-previous--earth-science-services"
                  >
                    EARTH SCIENCE SERVICES
                  </a>
                </li>
                <li>
                  <a
                    data-testid="tool-keyword__select-previous--data-analysis-and-visualization"
                  >
                    DATA ANALYSIS AND VISUALIZATION
                  </a>
                </li>
                <li>
                  <a
                    data-testid="tool-keyword__select-previous--geographic-information-systems"
                  >
                    GEOGRAPHIC INFORMATION SYSTEMS
                  </a>
                </li>
              </ul>
              <div
                class="eui-item-list-pane"
                style="margin-top: -110px;"
              >
                <div
                  data-testid="tool-keyword__search-keyword-field"
                >
                  <div
                    class="rbt"
                    style="width: 399px; border-style: hidden; outline: none; position: relative;"
                    tabindex="-1"
                  >
                    <div
                      style="display: flex; flex: 1; height: 100%; position: relative;"
                    >
                      <input
                        aria-autocomplete="both"
                        aria-expanded="false"
                        aria-haspopup="listbox"
                        autocomplete="off"
                        class="rbt-input-main form-control rbt-input"
                        placeholder="Search for Keywords..."
                        role="combobox"
                        type="text"
                        value=""
                      />
                      <input
                        aria-hidden="true"
                        class="rbt-input-hint"
                        readonly=""
                        style="background-color: transparent; border-color: transparent; box-shadow: none; color: rgba(0, 0, 0, 0.54); left: 0px; pointer-events: none; position: absolute; top: 0px; width: 100%; border-style: inset inset inset inset; border-width: 2px 2px 2px 2px; line-height: normal; padding: 1px 1px 1px 1px;"
                        tabindex="-1"
                        value=""
                      />
                    </div>
                  </div>
                </div>
                <ul>
                  <li>
                    <a
                      class="final-option"
                      data-testid="tool-keyword__final-option--desktop-geographic-information-systems"
                    >
                       
                      DESKTOP GEOGRAPHIC INFORMATION SYSTEMS
                    </a>
                  </li>
                  <li>
                    <a
                      class="final-option"
                      data-testid="tool-keyword__final-option--mobile-geographic-information-systems"
                    >
                       
                      MOBILE GEOGRAPHIC INFORMATION SYSTEMS
                    </a>
                  </li>
                </ul>
              </div>
            </div>
            <button
              class="eui-btn--blue add-science-keyword btn btn-primary"
              data-testid="tool-keyword__add-keyword-btn"
              disabled=""
              style="margin-top: 25px; margin-left: 15px;"
              type="button"
            >
              <span
                style="margin-right: .25em;"
              >
                <i
                  class="fa-solid fa-circle-plus fa-sm"
                />
              </span>
              Add Keyword
            </button>
          </div>
        </div>
      </div>
    </div>
    <div>
      <button
        class="btn btn-primary"
        type="submit"
      >
        Submit
      </button>
    </div>
  </form>
</div>
`;

exports[`Tool Keywords Field Test Adding the Same Keyword with ToolSpecificTerm 1`] = `
<div>
  <form
    class="rjsf"
  >
    <div
      class="form-group field field-undefined"
    >
      <div
        class="form-group"
      >
        <div
          id="keyword-picker"
        >
          <div>
            <div
              style="font-size: 1.10rem;"
            >
              <span
                class="title"
              >
                Tool Keyword
              </span>
              <hr
                class="border-0 bg-secondary"
                style="height: 1px;"
              />
            </div>
            <div
              class="added-keywords"
              data-testid="added-tool-keywords"
              style="padding: 20px;"
            >
              <li>
                EARTH SCIENCE SERVICES &gt; DATA ANALYSIS AND VISUALIZATION &gt; GEOGRAPHIC INFORMATION SYSTEMS &gt; MOBILE GEOGRAPHIC INFORMATION SYSTEMS
                <a
                  data-testid="tool-keyword__added-keyword--0"
                >
                  <i
                    class="fa fa-times-circle"
                    style="padding: 5px; color: red;"
                  />
                </a>
              </li>
            </div>
            <div
              class="eui-nested-item-picker"
              style="margin-left: 105px; padding: 15px;"
            >
              <ul
                class="eui-item-path"
              >
                <li>
                  <a
                    data-testid="tool-keyword__select-previous--tool-keyword"
                  >
                    TOOL KEYWORD
                  </a>
                </li>
                <li>
                  <a
                    data-testid="tool-keyword__select-previous--earth-science-services"
                  >
                    EARTH SCIENCE SERVICES
                  </a>
                </li>
                <li>
                  <a
                    data-testid="tool-keyword__select-previous--data-analysis-and-visualization"
                  >
                    DATA ANALYSIS AND VISUALIZATION
                  </a>
                </li>
                <li>
                  <a
                    data-testid="tool-keyword__select-previous--geographic-information-systems"
                  >
                    GEOGRAPHIC INFORMATION SYSTEMS
                  </a>
                </li>
              </ul>
              <div
                class="eui-item-list-pane"
                style="margin-top: -110px;"
              >
                <div
                  data-testid="tool-keyword__search-keyword-field"
                >
                  <div
                    class="rbt"
                    style="width: 399px; border-style: hidden; outline: none; position: relative;"
                    tabindex="-1"
                  >
                    <div
                      style="display: flex; flex: 1; height: 100%; position: relative;"
                    >
                      <input
                        aria-autocomplete="both"
                        aria-expanded="false"
                        aria-haspopup="listbox"
                        autocomplete="off"
                        class="rbt-input-main form-control rbt-input"
                        placeholder="Search for Keywords..."
                        role="combobox"
                        type="text"
                        value=""
                      />
                      <input
                        aria-hidden="true"
                        class="rbt-input-hint"
                        readonly=""
                        style="background-color: transparent; border-color: transparent; box-shadow: none; color: rgba(0, 0, 0, 0.54); left: 0px; pointer-events: none; position: absolute; top: 0px; width: 100%; border-style: inset inset inset inset; border-width: 2px 2px 2px 2px; line-height: normal; padding: 1px 1px 1px 1px;"
                        tabindex="-1"
                        value=""
                      />
                    </div>
                  </div>
                </div>
                <ul>
                  <li>
                    <a
                      class="final-option"
                      data-testid="tool-keyword__final-option--desktop-geographic-information-systems"
                    >
                       
                      DESKTOP GEOGRAPHIC INFORMATION SYSTEMS
                    </a>
                  </li>
                  <li>
                    <a
                      class="final-option"
                      data-testid="tool-keyword__final-option--mobile-geographic-information-systems"
                    >
                       
                      MOBILE GEOGRAPHIC INFORMATION SYSTEMS
                    </a>
                  </li>
                </ul>
              </div>
            </div>
            <button
              class="eui-btn--blue add-science-keyword btn btn-primary"
              data-testid="tool-keyword__add-keyword-btn"
              disabled=""
              style="margin-top: 25px; margin-left: 15px;"
              type="button"
            >
              <span
                style="margin-right: .25em;"
              >
                <i
                  class="fa-solid fa-circle-plus fa-sm"
                />
              </span>
              Add Keyword
            </button>
          </div>
        </div>
      </div>
    </div>
    <div>
      <button
        class="btn btn-primary"
        type="submit"
      >
        Submit
      </button>
    </div>
  </form>
</div>
`;

exports[`Tool Keywords Field Test Adding the Same Keyword without ToolSpecificTerm 1`] = `
<div>
  <form
    class="rjsf"
  >
    <div
      class="form-group field field-undefined"
    >
      <div
        class="form-group"
      >
        <div
          id="keyword-picker"
        >
          <div>
            <div
              style="font-size: 1.10rem;"
            >
              <span
                class="title"
              >
                Tool Keyword
              </span>
              <hr
                class="border-0 bg-secondary"
                style="height: 1px;"
              />
            </div>
            <div
              class="added-keywords"
              data-testid="added-tool-keywords"
              style="padding: 20px;"
            >
              <li>
                EARTH SCIENCE SERVICES &gt; DATA MANAGEMENT/DATA HANDLING &gt; CATALOGING &gt; 
                <a
                  data-testid="tool-keyword__added-keyword--0"
                >
                  <i
                    class="fa fa-times-circle"
                    style="padding: 5px; color: red;"
                  />
                </a>
              </li>
            </div>
            <div
              class="eui-nested-item-picker"
              style="margin-left: 70px; padding: 15px;"
            >
              <ul
                class="eui-item-path"
              >
                <li>
                  <a
                    data-testid="tool-keyword__select-previous--tool-keyword"
                  >
                    TOOL KEYWORD
                  </a>
                </li>
                <li>
                  <a
                    data-testid="tool-keyword__select-previous--earth-science-services"
                  >
                    EARTH SCIENCE SERVICES
                  </a>
                </li>
                <li>
                  <a
                    data-testid="tool-keyword__select-previous--data-management-data-handling"
                  >
                    DATA MANAGEMENT/DATA HANDLING
                  </a>
                </li>
              </ul>
              <div
                class="eui-item-list-pane"
                style="margin-top: -70px;"
              >
                <div
                  data-testid="tool-keyword__search-keyword-field"
                >
                  <div
                    class="rbt"
                    style="width: 399px; border-style: hidden; outline: none; position: relative;"
                    tabindex="-1"
                  >
                    <div
                      style="display: flex; flex: 1; height: 100%; position: relative;"
                    >
                      <input
                        aria-autocomplete="both"
                        aria-expanded="false"
                        aria-haspopup="listbox"
                        autocomplete="off"
                        class="rbt-input-main form-control rbt-input"
                        placeholder="Search for Keywords..."
                        role="combobox"
                        type="text"
                        value=""
                      />
                      <input
                        aria-hidden="true"
                        class="rbt-input-hint"
                        readonly=""
                        style="background-color: transparent; border-color: transparent; box-shadow: none; color: rgba(0, 0, 0, 0.54); left: 0px; pointer-events: none; position: absolute; top: 0px; width: 100%; border-style: inset inset inset inset; border-width: 2px 2px 2px 2px; line-height: normal; padding: 1px 1px 1px 1px;"
                        tabindex="-1"
                        value=""
                      />
                    </div>
                  </div>
                </div>
                <ul>
                  <li>
                    <a
                      class="final-option"
                      data-testid="tool-keyword__final-option--cataloging"
                    >
                       
                      CATALOGING
                    </a>
                  </li>
                </ul>
              </div>
            </div>
            <button
              class="eui-btn--blue add-science-keyword btn btn-primary"
              data-testid="tool-keyword__add-keyword-btn"
              disabled=""
              style="margin-top: 25px; margin-left: 15px;"
              type="button"
            >
              <span
                style="margin-right: .25em;"
              >
                <i
                  class="fa-solid fa-circle-plus fa-sm"
                />
              </span>
              Add Keyword
            </button>
          </div>
        </div>
      </div>
    </div>
    <div>
      <button
        class="btn btn-primary"
        type="submit"
      >
        Submit
      </button>
    </div>
  </form>
</div>
`;
